fix: addresses overflow issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -498,7 +498,7 @@ a {
 }
 
 .socials-wrapper {
-	width: max-content;
+	max-width: max-content;
 	margin: 0 auto;
 }
 
